# steward

./: CLAUDE.md  README.md  TECHNICAL_REQUIREMENTS.md  index.html  package-lock.json  package.json  settings.html  tailwind.config.js
.github/workflows/: release.yml  test.yml
docs/: DEV_SETUP.md  TECHNICAL_REQUIREMENTS.md
docs/features/: state-management-architecture.md  theme-system-plan.md
scripts/: build-all.sh  release.sh  setup-dev.sh
src/: App.tsx  index.css  main.tsx  settings.tsx
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: FloatingToolbar.tsx  HelpContent.tsx  MicrophoneButton.tsx  ResponseWindow.tsx  SettingsContent.tsx  SettingsWindow.tsx  Toolbar.tsx  ToolbarWindow.tsx  WaveformAnimation.tsx
src/components/alerts/: AlertSystem.tsx
src/components/providers/: StateProvider.tsx
src/components/settings/: AboutSettings.tsx  AudioSettings.tsx  GeneralSettings.tsx  SettingsField.tsx  SettingsForm.tsx  SettingsSection.tsx  ShortcutsSettings.tsx
src/components/tabs/: AboutTab.tsx  AudioTab.tsx  GeneralTab.tsx  ShortcutsTab.tsx
src/components/ui/: Button.tsx  Listbox.tsx  Switch.tsx
src/contexts/: ThemeContext.tsx
src/hooks/: use-app-state.ts
src/lib/: themeConfig.ts  themes.ts
src/store/: index.ts  persistence.ts  types.ts  windowSync.ts
src/styles/: globals.css
src/tabs/: AboutTab.tsx  AudioTab.tsx  GeneralTab.tsx  ShortcutsTab.tsx
src/types/: app-types.ts
src/windows/: MainWindow.tsx  SettingsWindow.tsx  ToolbarWindow.tsx
(+6 files in other folders)
